Fixing alignment issue in Contact Page

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+#root {
+  width: 100%;
+}
+
 .App-logo {
   height: 40vmin;
 }
