--- a/src/components/contactCard/ContactCard.css
+++ b/src/components/contactCard/ContactCard.css
@@ -45,10 +45,6 @@
     text-decoration: none;
 }
 
-.contact-social-media {
-    margin-top: 2rem;
-}
-
 .contact-card-icon {
     margin-right: 4px;
 }
